--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "jade": "*",
     "coffee-script": "~1.4.0",
     "coffee-trace": "~1.3.1",
-    "bundle-up": "~0.3.5",
+    "bundle-up2": "~0.4.5",
     "lodash": "~1.0.0-rc.3"
   },
   "engines": {
