--- a/package.json
+++ b/package.json
@@ -11,7 +11,16 @@
     "coffee-script": "~1.4.0",
     "coffee-trace": "~1.3.1",
     "bundle-up2": "~0.4.5",
-    "lodash": "~1.0.0-rc.3"
+    "lodash": "~1.0.0-rc.3",
+    "node-dev": "~2.0.1",
+    "async": "~0.2.8",
+    "mongoose": "~3.6.8",
+    "request": "~2.16.6",
+    "everyauth": "https://github.com/koobitor/everyauth/archive/express3.tar.gz",
+    "redis": "~0.8.3",
+    "connect-redis": "~1.4.5",
+    "moment": "~2.1.0",
+    "connect": "~2.8.5"
   },
   "engines": {
     "node": "0.8.x",
