--- a/package.json
+++ b/package.json
@@ -6,21 +6,21 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "3.0.1",
-    "jade": "*",
-    "coffee-script": "~1.4.0",
+    "express": "~3.4.8",
+    "jade": "~1.1.5",
+    "coffee-script": "~1.6.3",
     "coffee-trace": "~1.3.1",
     "bundle-up2": "~0.4.5",
-    "lodash": "~1.0.0-rc.3",
-    "node-dev": "~2.0.1",
-    "async": "~0.2.8",
-    "mongoose": "~3.6.8",
-    "request": "~2.16.6",
-    "everyauth": "https://github.com/koobitor/everyauth/archive/express3.tar.gz",
-    "redis": "~0.8.3",
-    "connect-redis": "~1.4.5",
-    "moment": "~2.1.0",
-    "connect": "~2.8.5"
+    "lodash": "~2.4.1",
+    "node-dev": "~2.1.6",
+    "async": "~0.2.10",
+    "mongoose": "~3.8.7",
+    "request": "~2.33.0",
+    "everyauth": "~0.4.5",
+    "redis": "~0.10.0",
+    "connect-redis": "~1.4.6",
+    "moment": "~2.5.1",
+    "connect": "~2.12.0"
   },
   "engines": {
     "node": "0.8.x",
